Add handling of emerging domain events during command execution